Fixed some layout issues.

--- a/Service Consumer/public/css/main.css
+++ b/Service Consumer/public/css/main.css
@@ -713,9 +713,9 @@ div#popup-container {
     background-image: url("../flags/1x1/ga.svg"); }
 
 .flag-icon-gb {
-  background-image: url("../flags/4x3/gb.svg"); }
+  background-image: url("../flags/4x3/uk.svg"); }
   .flag-icon-gb.flag-icon-squared {
-    background-image: url("../flags/1x1/gb.svg"); }
+    background-image: url("../flags/1x1/uk.svg"); }
 
 .flag-icon-gd {
   background-image: url("../flags/4x3/gd.svg"); }
